# poetrytest

./: main.py  pyproject.toml  requirements.txt
poetry_test/: Multiplier.py  __init__.py
