[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Willy Ray <william.ray@hsc.utah.edu>"]
readme = "README.md"
packages = [
    { include = "poetry_test", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
